[package]
name = "QR2M"
description = "Quantum Random Rust Mnemonic"
version = "0.80.0"
authors = ["Control Owl <qr2m[at]r-o0-t[dot]wtf>"]
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/control-owl/qr2m"
readme = "README.md"
edition = "2024"
build = "build.rs"


[dependencies]
rust-i18n = { version = "3.1.4" }
toml = { version = "0.8.20" }
serde = { version = "1.0.219" }
toml_edit = { version = "0.22.24" }
serde_json = { version = "1.0.140" }
csv = { version = "1.3.1" }
rand = { version = "0.9.0" }
sha2 = { version = "0.10.8" }
hex = { version = "0.4.3" }
bip39 = { version = "2.1.0" }
regex = { version = "1.11.1" }
secp256k1 = { version = "0.30.0" }
bs58 = { version = "0.5.1" }
ripemd = { version = "0.1.3" }
num-bigint = { version = "0.4.6" }
sha3 = { version = "0.10" }
glib = { version = "0.20.9" }
libadwaita = { version = "0.7.2" }
lazy_static = { version = "1.5.0" }
include_dir = { version = "0.7.4" }
once_cell = { version = "1.21.3" }
dashmap = { version = "6.1.0" }
num_cpus = { version = "1.16" }
tokio = { version = "1.44.1", features = ["full"] }
gtk4 = { version = "0.9.6", features = ["gnome_46"] }
reqwest = { version = "0.12.15", features = ["json"], optional = true }
ed25519-dalek = { version = "2.1.1", optional = true }
native-tls = { version = "0.2.14", optional = true }


[features]
full = ["reqwest", "native-tls"]
dev = ["full", "ed25519-dalek"]


[build-dependencies]
winres = "0.1.12"


[package.metadata.winres]
OriginalFilename = "QR2M.EXE"
LegalCopyright = "CC-BY-NC-ND-4.0 (2023-2025) Control Owl"
FileDescription = "Quantum Random Rust Mnemonic"


[package.metadata.excluded]
exclude = ["build.rs"]


[[bin]]
name = "QR2M"
path = "src/main.rs"


[lib]
name = "qr2m_lib"
path = "src/lib.rs"
