[package]
name = "QR2M"
description = "Quantum Random Rust Mnemonic"
version = "0.82.3"
authors = ["Control Owl <qr2m[at]r-o0-t[dot]wtf>"]
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/control-owl/qr2m"
readme = "README.md"
edition = "2024"
build = "build.rs"


[dependencies]
rust-i18n = "3.1.4"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
toml_edit = "0.22.26"
serde_json = "1.0.140"
csv = "1.3.1"
rand = "0.9.1"
sha2 = "0.10.9"
hex = "0.4.3"
ring = "0.17.14"
secp256k1 = "0.31.0"
bs58 = "0.5.1"
ripemd = "0.1.3"
num-bigint = "0.4.6"
sha3 = "0.10.8"
glib = "0.20.9"
libadwaita = "0.7.2"
lazy_static = "1.5.0"
include_dir = "0.7.4"
dashmap = "6.1.0"
num_cpus = "1.16.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "sync"] }
gtk4 = { version = "0.9.6", features = ["gnome_46"] }

reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
], optional = true, default-features = false }

native-tls = { version = "0.2.14", optional = true }
# openssl = { version = "0.10.72", optional = true }

ed25519-dalek = { version = "2.1.1", optional = true }

[features]
full = ["reqwest", "native-tls"]
dev = ["full", "ed25519-dalek"]


[build-dependencies]
winres = "0.1.12"


[package.metadata.winres]
OriginalFilename = "QR2M.EXE"
LegalCopyright = "CC-BY-NC-ND-4.0 (2023-2025) Control Owl"
FileDescription = "Quantum Random Rust Mnemonic"


[package.metadata.excluded]
exclude = ["build.rs"]


[[bin]]
name = "QR2M"
path = "src/main.rs"


[lib]
name = "qr2m_lib"
path = "src/lib.rs"
