[package]
name = "QR2M"
description = "Quantum Random Rust Mnemonic"
version = "0.87.0"
authors = ["Control Owl <qr2m[at]r-o0-t[dot]wtf>"]
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/control-owl/qr2m"
readme = "README.md"
edition = "2024"
build = "build.rs"


[dependencies]
gtk4 = { version = "0.10.0", features = ["gnome_46"] }
libadwaita = "0.8.0"
glib = "0.21.1"

toml = "0.9.5"
toml_edit = "0.23.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

rust-i18n = "3.1.5"
csv = "1.3.1"
bs58 = "0.5.1"
hex = "0.4.3"
num_cpus = "1.17.0"

rand = "0.9.2"
sha2 = "0.10.9"
sha3 = "0.10.8"
ring = "0.17.14"
num-bigint = "0.4.6"
lazy_static = "1.5.0"
include_dir = "0.7.4"

secp256k1 = "0.31.1"
ripemd = "0.1.3"
dashmap = "7.0.0-rc2"
rayon = "1.11.0"

tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
], optional = true }
native-tls = { version = "0.2.14", optional = true }
ed25519-dalek = { version = "2.2.0", optional = true }
reqwest = { version = "0.12.23", features = [
    "json",
    "rustls-tls",
], optional = true, default-features = false }


[features]
default = []
offline = []
full = ["reqwest", "native-tls"]
dev = ["full", "ed25519-dalek", "tokio"]


[build-dependencies]
winres = "0.1.12"


[package.metadata.winres]
OriginalFilename = "QR2M.EXE"
LegalCopyright = "CC-BY-NC-ND-4.0 (2023-2025) Control Owl"
FileDescription = "Quantum Random Rust Mnemonic"


[package.metadata.excluded]
exclude = ["build.rs"]


[[bin]]
name = "QR2M"
path = "src/main.rs"


[lib]
name = "qr2m_lib"
path = "src/lib.rs"
